Added intro to NNs; Updated some related work.

--- a/Background.tex
+++ b/Background.tex
@@ -8,7 +8,7 @@ g(z') = \phi_0 + \sum\limits_{i=1}^M \phi_i z_{i}^{'}
 \label{eq:lime-explanation}
 \end{equation}
 where $z^{'} \epsilon$ $\{0,1\}^{M}$ represents a simplified input which is explained in a later section, M is the number of simplified input features, and $\phi_{i}$ $\epsilon$ $\mathbb{R}$ is an attribute value assigned to each feature indicating their impact on the prediction \cite{NIPS2017_7062}.
-The \emph{explanation model} is used as an approximation for our complex model and remains linear so that it is interpretable. Note that in the explanation model only the input and output layers are given explanations This means that the explanation is rather limited as we are unable to gather any information regarding the hidden layers. Suppose we have a model which takes in a list of symptoms that a patient is exhibiting and attempts to predict whether the patient has the flu or not. In figure \ref{fig:lime-process} we see how LIME takes the input features which are the symptoms of the patient and provides visual feedback where each feature is given a weight and a color representing how much they contributed towards or against the patient having the flu. Ultimately the visual feedback is given to a Doctor as a reference and they should be the one to give the final diagnosis.
+The \emph{explanation model} is used as an approximation for the complex model and remains linear so that it is interpretable. Note that in the explanation model only the input and output layers are given explanations This means that the explanation is rather limited as we are unable to gather any information regarding the hidden layers. Suppose we have a model which takes in a list of symptoms that a patient is exhibiting and attempts to predict whether the patient has the flu or not. In figure \ref{fig:lime-process} we see how LIME takes the input features which are the symptoms of the patient and provides visual feedback where each feature is given a weight and a color representing how much they contributed towards or against the patient having the flu. Ultimately the visual feedback is given to a Doctor as a reference and they should be the one to give the final diagnosis.
 
 
 
@@ -35,9 +35,9 @@ Regardless of the data type LIME creates a mapping function which transforms the
 \subsection{Sampling from the input} Once the the input has been transformed into a internal representation, LIME begins sampling from the new input in order to create perturbed samples. The sampling process like the data transformation process is dependent on the type of input data.
 
 \begin{itemize}
-\item For text data, the sampling process involves removing uniformly at random, words from the instance. In our previous example ``The dog jumped over the fence'', some permutations that could be created from sampling would be ``dog jumped over the fence'', ``over the fence'', or ``jumped''.
+\item For text data, the sampling process involves removing uniformly at random, words from the instance. In the previous example ``The dog jumped over the fence'', some permutations that could be created from sampling would be ``dog jumped over the fence'', ``over the fence'', or ``jumped''.
 
-\item For images, the sampling process is as simple as setting  values chosen uniformly at random in our vector to 0 therefore setting them to missing.
+\item For images, the sampling process is as simple as setting  values chosen uniformly at random in the vector to 0 therefore setting them to missing.
 
 \item For tabular data such as matrices, it is once again dependant on whether the data is numerical or categorical. For categorical features we randomly set features to 0 so that they take random values within their category. For numerical features, the instance is perturbed by sampling from a normal distribution and doing the inverse operation of mean-centering and scaling.
 \end{itemize}
@@ -45,12 +45,12 @@ Regardless of the data type LIME creates a mapping function which transforms the
 
 
 \subsection{Training the explanation model} Finally the explanation model has be trained, given a prediction instance $x$, i.e. a specific feature set that predicts a specific probability under the model, after LIME has transformed the input into a internal data representation $x^{'}$ and a specified number perturbed samples have been generated. An individual perturbed sample $z$ is then reconstructed to represent an actual sample if needed. This is mainly done by setting the missing features to 0. The reconstructed input $z^{'}$ is predicted on the model and LIME records how the new prediction probabilities have changed. This is done for each perturbed sample, the more perturbed samples we use the more accurate the results are. By doing this LIME is able to explain the contribution of each feature towards the prediction.
-We choose our \emph{explanation model} by using the following equation,
+We choose the \emph{explanation model} by using the following equation,
 \begin{equation}
 \xi(x) = \argmin_{g\epsilon G} L (f, g,\pi_{x} ) + \Omega(g)
 \label{eq:explanation-loss}
 \end{equation}
-where f is the model that we are trying to explain, g is all potential explanation models, $\xi(x)$ represents the optimal explanation model, $L(f, g, \pi_{x})$ is the approximation of the difference between f and g, $\pi_{x}$ is a proximity measure between an instance z to x to define locality around x where instances closer to x are given a higher weighting, and $\Omega(g)$ is a complexity score given to current explanation model which needs to minimized . LIME defaults to linear sparse models which are given a complexity rating $\Omega(g) = 0$  as our domain for possible explanation models such as in (\ref{eq:lime-explanation}).
+where f is the model that we are trying to explain, g is all potential explanation models, $\xi(x)$ represents the optimal explanation model, $L(f, g, \pi_{x})$ is the approximation of the difference between f and g, $\pi_{x}$ is a proximity measure between an instance z to x to define locality around x where instances closer to x are given a higher weighting, and $\Omega(g)$ is a complexity score given to current explanation model which needs to minimized . LIME defaults to linear sparse models which are given a complexity rating $\Omega(g) = 0$  as the domain for possible explanation models such as in (\ref{eq:lime-explanation}).
 We can see in figure \ref{fig:lime-boundary} the linear decision boundary that LIME has learnt within a complex space. The crosses represent the perturbed sampled which were generated training the explanation model, where the bold cross is the initial input. The complex space is the models decision function and the dotted line is the linear explanation model that LIME has learnt.
 
 \begin  {figure}[!htpb]
@@ -138,8 +138,7 @@ f(h_{x}(z^{'})) = E[f(z) | z_{S}],
 \approx f([z_{S}, E[z_{\overline{S}}]])
 \label{eq:summarized-unique}
 \end{equation}
-SHAP (SHapley Additive exPlanation) values attribute to each feature the change in the expected model prediction when conditioning on that feature.  They explain how to get from the base value $E[f(z)]$ that would be predicted if we did not know any features to the current output $f(x)$. Figure \ref{fig:shap-values} shows a single ordering. When the model is non-linear or the input features are not independent, however, the order in which features are added to the expectation matters, and the SHAP values arise from averaging the $\phi_{i}$ values across all possible orderings. \cite{NIPS2017_7062}
-
+SHAP (SHapley Additive exPlanation) values attribute to each feature the change in the expected model prediction when conditioning on that feature.  They explain how to get from the base value $E[f(z)]$ that would be predicted if we did not know any features to the current output $f(x)$ \cite{NIPS2017_7062}. Figure \ref{fig:shap-values} shows a single ordering. In the case of features which are dependant on one another or a nonlinear model, the order of which the features are added to the expectation is important.  In that case the SHAP values are calculated by averaging the $\phi_{i}$ values across all possible orderings \cite{NIPS2017_7062}. 
 \begin  {figure} [!htbp]
   \includegraphics[width=\linewidth]{Evaluation_Images/Shap_values.png}
   \caption{How the SHAP values are computed\cite{NIPS2017_7062}}
@@ -150,7 +149,7 @@ SHAP (SHapley Additive exPlanation) values attribute to each feature the change 
 Using SHAP Values, the previous \emph{additive feature attribution methods} can be adapted. There are a total of 6 tools which are adapted, however in this paper we only look at the adaptions of LIME and DeepLIFT\cite{DBLP:journals/corr/ShrikumarGK17}\cite{DBLP:journals/corr/ShrikumarGSK16}.
 
 \subsubsection{Kernel SHAP}
-Adapting LIME to adhere to properties 1 and 3 which it initially violates gives rise to \emph{Kernel SHAP}, which makes use of SHAP Values. It remains model agnostic. If we refer back to (\ref{eq:explanation-loss}), we recall that $\Omega(g)$ is the term which penalizes our \emph{explanation model} based on how complex it is, $\pi_{x^{'}}$ is the locality around input $x^{'}$, and $L(f, g, \pi_{x^{'}})$ is the loss function which indicates the difference between our original model $f$ and our explanation model $g$. These three values are determined heuristically by LIME. However SHAP \cite{NIPS2017_7062} provides methods for choosing them that adheres to all three properties and has been named \emph{Shapley Kernel}.
+Adapting LIME to adhere to properties 1 and 3 which it initially violates gives rise to \emph{Kernel SHAP}, which makes use of SHAP Values. It remains model agnostic. If we refer back to (\ref{eq:explanation-loss}), we recall that $\Omega(g)$ is the term which penalizes the \emph{explanation model} based on how complex it is, $\pi_{x^{'}}$ is the locality around input $x^{'}$, and $L(f, g, \pi_{x^{'}})$ is the loss function which indicates the difference between the original model $f$ and the explanation model $g$. These three values are determined heuristically by LIME. However SHAP \cite{NIPS2017_7062} provides methods for choosing them that adheres to all three properties and has been named \emph{Shapley Kernel}.
 Under (\ref{eq:lime-explanation}), the specific forms of $\pi_{x^{'}}$, L, and $\Omega$ which make (\ref{eq:explanation-loss}) consistent with the three properties of SHAP are:
 \begin{align*}
    \Omega(g) = 0,
@@ -183,7 +182,7 @@ SHAP has a similar limitation to LIME as that it only uses the input and output 
 
 
 \section{Lucid}
-Lucid is a collection of infrastructure and tools for research in neural network interpretability \cite{Https://github.com/tensorflow/lucid}. Several powerful techniques such as \emph{feature visualization}, \emph{attribution}, and \emph{dimensionality reduction} have been studied for interpreting neural networks, however these techniques have been researched in isolation and there has been not been research on how these techniques may complement one another. In the paper \emph{The Building Blocks of Interpretability} \cite{olah2018the} various parts of Lucid are used in order to gain some interpretation into the hidden layers of a CNN network, the previously isolated interpretation techniques have been unified to create a rich interface. The interface that Lucid provides can be seen in figure \ref{fig:lucid-summary}, the \emph{layers} are the layers which we are able to gain insight into, \emph{atoms} are the various ways we can group our the pixels in our input images which will be explained at a later stage, \emph{content} is the type of information we can gain, and \emph{presentation} is how this information is relayed to the user.
+Lucid is a collection of infrastructure and tools for research in neural network interpretability \cite{Https://github.com/tensorflow/lucid}. Several powerful techniques such as \emph{feature visualization}, \emph{attribution}, and \emph{dimensionality reduction} have been studied for interpreting neural networks, however these techniques have been researched in isolation and there has been not been research on how these techniques may complement one another. In the paper \emph{The Building Blocks of Interpretability} \cite{olah2018the} various parts of Lucid are used in order to gain some interpretation into the hidden layers of a CNN network, the previously isolated interpretation techniques have been unified to create a rich interface. The interface that Lucid provides can be seen in figure \ref{fig:lucid-summary}, the \emph{layers} are the layers which we are able to gain insight into, \emph{atoms} are the various ways we can group the the pixels in the input images which will be explained at a later stage, \emph{content} is the type of information we can gain, and \emph{presentation} is how this information is relayed to the user.
 \cite{olah2018the}
 
 \begin  {figure}[!htpb]
@@ -198,18 +197,18 @@ Lucid is a collection of infrastructure and tools for research in neural network
 The previous two tools \emph{LIME} and \emph{SHAP} only attempt to provide interpretation  between input and output layers, where as Lucid provides interpretation between any two layers. Each layer in a neural network can be seen as a three-dimensional cube where each cell represents an \emph{activation}, which is the amount that a specific neuron fires. The x- and y-axes represent the positions in the image, and the z-axes the particular channel. Usually activations are represented as abstract vectors that are not interpretable. A \emph{Semantic dictionary} is introduced which provides a more meaningful human interpretable representation of activations. \emph{Semantic Dictionaries} attempt to provide each activation with a \emph{canonical example} by mapping each activation with a visualization of that particular neuron sorted by the magnitude. This allows activations to map to similar human representations such as a ``Floppy ear'', or ``Dog snout'' when interpreting a model trained on classifying dogs. There are many ways to approximate the relationship between features and how they are used to arrive at a prediction however in this paper we linearly approximate them. 
 
 \subsection{Types of Activations}
-Since we can visualize our group of neurons as a cube, there are different ways we can slice this cube into groupings to form activations. The way each activation breaks up our cube can be seen in figure \ref{fig:lucid-maps}
+Since we can visualize the group of neurons as a cube, there are different ways we can slice this cube into groupings to form activations. The way each activation breaks up the cube can be seen in figure \ref{fig:lucid-maps}
 .
 \subsubsection{Individual Neurons}
 A \emph{Saliency map} is a simple heat map which highlights pixels of a input image that cause the most output classification. Since this method works with each individual neuron we run into two big problems, each pixel in a image is usually entangled with surrounding pixels and is heavily affected by transformations such as contrast or brightness changes. The second problem is that \emph{saliency maps} are fairly limited and do not allow multiple class attributions to be displayed at one time.
 
 \subsubsection{Spatial Activations}
-Due to the limitations of the previous approach only being able to show the attributions to a single class at a time, a different approach is introduced called \emph{Spatial activations}. Spatial activations are performed from a chosen layer to all $n$-output classes. Dimensionality reduction is then performed on this n-dimensional vector to produce a multi-directional \emph{saliency map}. Once this \emph{saliency map} is overlayed on our magnitude-sized activation grid we obtain an \emph{information scent} over this attribution space. This allows attribution between layers, however different concepts are being detected together and if we continue to use spatial positions these concepts will remain entangled.
+Due to the limitations of the previous approach only being able to show the attributions to a single class at a time, a different approach is introduced called \emph{Spatial activations}. Spatial activations are performed from a chosen layer to all $n$-output classes. Dimensionality reduction is then performed on this n-dimensional vector to produce a multi-directional \emph{saliency map}. Once this \emph{saliency map} is overlayed on the magnitude-sized activation grid we obtain an \emph{information scent} over this attribution space. This allows attribution between layers, however different concepts are being detected together and if we continue to use spatial positions these concepts will remain entangled.
 
 \subsubsection{Channel Activations}
 By using spatial activations, the attribution is aggregated over all channels. which means we can not tell which detectors at each position most contributed to the final output classification. We can slice the cube by channels rather than spatial locations, which allows us to tell which detectors contributed the most to the output. In the case of a model which attempts to classify dogs, detectors may include those which detect ``Floppy ears'' or ``Dog snouts''.
 \subsubsection{Neuron Groups}
-\emph{Individual neurons} can provide the most information, however for larger networks where there may be tens of thousand of neurons this is too much information for humans. \emph{Spatial activations} and \emph{Channel activations} both provide different information about our layers, however we would gain the most if we could combine both of these techniques. There is a field of research, called \emph{matrix factorization} which studies optimal ways of breaking up matrices, we can make use of these methods by flattening our cube into a matrix of spatial locations and channels. Applying \emph{matrix factorization} on this newly created matrix, we can obtain more meaningful explanations of our layers.  By using the techniques in \emph{matrix factorization} we are able to choose what we prioritize in our activations such as describing the gradient, fully describing our activations, or if we want to fully describe the attributions. The problem with this method is that the \emph{neuron groupings} we use for a particular image can not be used for another image as each image would require a unique set of groups. 
+\emph{Individual neurons} can provide the most information, however for larger networks where there may be tens of thousand of neurons this is too much information for humans. \emph{Spatial activations} and \emph{Channel activations} both provide different information about the layers, however we would gain the most if we could combine both of these techniques. There is a field of research, called \emph{matrix factorization} which studies optimal ways of breaking up matrices, we can make use of these methods by flattening the cube into a matrix of spatial locations and channels. Applying \emph{matrix factorization} on this newly created matrix, we can obtain more meaningful explanations of the layers.  By using the techniques in \emph{matrix factorization} we are able to choose what we prioritize in the activations such as describing the gradient, fully describing the activations, or if we want to fully describe the attributions. The problem with this method is that the \emph{neuron groupings} we use for a particular image can not be used for another image as each image would require a unique set of groups. 
 \begin  {figure}[!htpb]
   \includegraphics[width=\linewidth]{Evaluation_Images/LUCID_maps.png}
   \caption{Different types of activations. \cite{olah2018the}}
