--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,7 +4,18 @@ Machine learning techniques have become widely adopted in many different domains
 
 \section{Problem Statement} \label{sect-intro-problem}
 Suppose you are approached by a real estate agency to build a model that can predict the market price of a property given its features such as \emph{size}, \emph{location}, \emph{number of bedrooms}. Now for example say your model gives a estimated worth of R1.5 million rand for the property, it is expected that a list of reasons be given as to why this property was valued as such. If we used a simple linear regression model for this, it would be as simple as extracting the weights for each feature and listing which features contributed the most to this price. However, after some experimentation you realize that the linear regression model is not accurate enough and by using modern neural networks you are able to greatly increase your accuracy. You are now faced with a problem since there is no simple way to explain what features were important in a neural network and are forced to use the inferior model in favor of interpretability.
+
 \section{What is a neural network}
+The goal of a Neural Network is to simulate the human brains ability to detect patterns within data in order to make some decision. For example given a picture of a cat with the aim at determining whether it is a cat or a dog. By distinguishing certain features such as their ears and mouth shape we as humans are able to come to the decision that it is indeed a cat. Figure \ref{fig-ff-nn} is the generic structure of a feedfoward Neural Network. Each individual circle is a \emph{neuron} which produces some real-valued activation. Sets of neurons are separated into \emph{layers} which each have a different representation of the data. The arrows which interconnect layers are called \emph{weights}. The input layer is what the Neural Networks sees as input data such as the pixels of an image of a cat. The hidden layers are internal representations of data that is learnt by the network. The output layer is the result of the decision that network has arrived at. In order to make decisions our Neural Network first has to be trained. This entails giving the Neural Network a set of samples with their corresponding \emph{correct decisions}. In the case of differentiating between cats and dogs, we may have a set of images of both cats and dogs and their corresponding labels. The weights and hidden neurons are initialized either randomly or by some algorithm. The input data is then put through the network and the produced outputs are compared to our actual outputs. The \emph{error} is calculated which is the difference between the actual and produced output and this error is propagated back into the layers of the network in order to update the weights and neurons accordingly with an algorithm called \emph{backpropagation} \cite{10.5555/65669.104451}\cite{10.5555/525960}. This process is repeated until it is decided that the error is small enough and we end up with a trained Neural Network.
+
+
+\begin  {figure}[!htpb]
+\centering
+  \includegraphics[width=0.9\linewidth]{Credit_Images/Sample-of-a-feed-forward-neural-network.png}
+   \caption{Architecture of a generic Feedforward Neural Network \cite{inbook}.}
+    \label{fig-ff-nn}
+\end{figure}
+
 \section{Why interpreting neural networks is difficult}
 Neural Networks are usually treated as \emph{black boxes} of which we have little to no understanding of their inner workings. An example is present in Figure \ref{fig:panada-nn} where an adversary \cite{szegedy2014intriguing} slightly adjusted the original image on the left by generating noise which causes the Neural Network to misclassify the \emph{Panda} as a \emph{Gibbon}. From a human perspective both images are obviously of a Panda but the Neural Network was easily fooled and there is no simple way to understand why. 
 \begin  {figure}[!htpb]
@@ -18,7 +29,7 @@ Looking at the architecture of a Neural Network we could identify which individu
    \caption {Simply making the images negative causes a misclassification by the network \cite{DBLP:journals/corr/HosseiniP17}.}
     \label{fig:negative-nn}
 \end{figure}
-It is natural to think that by providing the images altered by the noise into the training data we can prevent this form of misclassification. This is not feasible as we can not protect against every form of alteration. Therefore we need concrete explanations on how the input features affect the classification scheme of the network so that we may ascertain that the network has properly learnt actual features rather than artifacts. This extends to other network architectures. For a \emph{Recurrent Neural Network (RNN)} \cite{DBLP:journals/corr/Schmidhuber14} trained on classyfing a movie review as either good or bad, by slightly altering the input sequences it was possible to have the network misclassify 100\% of the training data \cite{DBLP:journals/corr/PapernotMSH16}. For instance changing the review “I  wouldn’t  rent  this  one  even  on  dollar  rental  night.”  into  “Excellent wouldn’t  rent  this  one  even  on  dollar  rental  night.” the network was fooled into misclassyfing the review as positive.  By simply inserting words with positive connotations in the input sequence the RNN was mislead. The goal of providing a relationship of input features to prediction output is referred to as the \emph{attribution problem} \cite{DBLP:journals/corr/SundararajanTY17}.
+It is natural to think that by providing the images altered by the noise into the training data we can prevent this form of misclassification. This is not feasible as we can not protect against every form of alteration. Therefore we need concrete explanations on how the input features affect the classification scheme of the network so that we may ascertain that the network has properly learnt actual features rather than artifacts. This extends to other network architectures. For a \emph{Recurrent Neural Network (RNN)} \cite{DBLP:journals/corr/Schmidhuber14} trained on classyfing a movie review as either good or bad, by slightly altering the input sequences it was possible to have the network misclassify 100\% of the training data \cite{DBLP:journals/corr/PapernotMSH16}. For instance changing the review “I  wouldn’t  rent  this  one  even  on  dollar  rental  night.”  into  “Excellent wouldn’t  rent  this  one  even  on  dollar  rental  night.” the network was fooled into misclassyfing the review as positive \cite{DBLP:journals/corr/PapernotMSH16}.  By simply inserting words with positive connotations into the input the RNN was mislead. The goal of providing a relationship of input features to prediction output is referred to as the \emph{attribution problem} \cite{DBLP:journals/corr/SundararajanTY17}.
 
 \subsection{Overview of Interpretability}
 As we have discussed in the previous section, linear models can be easily explained since their prediction is simply a linear combination of feature values weighted by model coefficients. However due to the need for more powerful non-linear models \emph{Random Forests} \cite{inbookb} among others  became a popular choice. Random Forests is a technique that constructs multiple decision trees and outputs the prediction as the average prediction of the individual trees. Since this technique was non-linear it was not adopted into many fields due it being difficult to interpret. A PhD thesis by \emph{Gilles Louppe} \cite{louppe2015understanding}  provided a methodology for extracting the  importance of features on a global level from Random Forests. The interpretability of Random Forests was further expanded when the popular machine learning library \emph{scikit-learn} released a blog post on how to obtain importance of features for individual predictions \cite{RandomData}. With the sudden growth in popularity of Neural Networks, interpretation was once again needed before it could replace older and weaker techniques. There have been several techniques which aim to interpret Neural Networks which range from using decision trees to approximate the network to isolating individual neurons in an attempt to explain their importance. These techniques are discussed in more detail in chapter \ref{sect-related}. For this thesis we have chosen 2 tools which claim to be model-agnostic explainers and a tool which provides a deep framework to explore the inner workings of a neural network. These will be discussed in detail in chapter \ref{sect-background}.
